--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
             <li>
               <a href="#!">
                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#clip0)">
+                  <g clip-path="url(#clip1)">
                     <path
                       d="M13.6866 6.71405C13.7059 4.45825 11.7846 2.39027 9.40381 2.10431C9.35646 2.0987 9.30488 2.09015 9.25027 2.08111C9.13241 2.06158 9.01052 2.0415 8.88754 2.0415C8.39959 2.0415 8.26916 2.38426 8.23482 2.58868C8.20143 2.78744 8.23328 2.95435 8.32933 3.08498C8.49092 3.30471 8.77524 3.34372 9.00361 3.37497C9.07055 3.38421 9.1337 3.39281 9.18657 3.40468C11.3256 3.88265 12.0459 4.6341 12.3979 6.75494C12.4064 6.80677 12.4103 6.87062 12.4144 6.93835C12.4298 7.19186 12.4618 7.71932 13.0289 7.71932H13.0289C13.0761 7.71932 13.1268 7.71524 13.1797 7.70719C13.7077 7.62694 13.6912 7.14481 13.6832 6.91316C13.681 6.84791 13.6788 6.7862 13.6844 6.74516C13.6859 6.73482 13.6866 6.72444 13.6866 6.71405Z"
                       fill="black" />
@@ -94,7 +94,7 @@
                       fill="black" />
                   </g>
                   <defs>
-                    <clipPath id="clip0">
+                    <clipPath id="clip1">
                       <rect width="16" height="16" fill="white" />
                     </clipPath>
                   </defs>
@@ -363,7 +363,25 @@
 
 
   <main class="main">
-    <section class="">
+    <section class="info">
+      <h2 class="visually-hidden">Игформация</h2>
+      <div class="info__wrapper">
+        <div class="info__wrapper__img">
+          <img class="info__img" src="./img/team.jpg" alt="Команда">
+        </div>
+        <div class="info__content">
+          <div class="info__block-left">
+            <h3 class="info__header">Твоя работа в крупнейшем интеграторе цифрового производства</h3>
+            <a class="info__btn" href="#!">Отправить резюме</a>
+            <p class="info__agreement">Нажимая кнопку, вы соглашаетесь на обработку персональных данных.</p>
+          </div>
+          <div class="info__block-right">
+            <p class="info__text">Top 3D Shop – лидер по продажам 3D-оборудования в России и странах СНГ. В 2018 мы стали лучшим интегратором 3D оборудования по аддитивным технологиям и цифровому производству по версии <a href="#!">3D Print Awards.</a></p>
+            <p class="info__text">За 6 лет работы более 10 000 клиентов по всей России и СНГ выбрали Top 3D Shop. В 2018 наш оборот составил 600 млн. рублей, в компании работает более 100 сотрудников.</p>
+            <p class="info__text">Новая цель: 1 млрд торгового оборота в этом году и выход на международные рынки. Если вы — целеустремленный специалист, готовый учиться новым навыкам и учить других, мыслите не просто как исполнитель, а как владелец своего направления, то нам по пути!</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
