--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/style.min.css">
   <title>top-3d-group</title>
 </head>
@@ -376,9 +377,63 @@
             <p class="info__agreement">Нажимая кнопку, вы соглашаетесь на обработку персональных данных.</p>
           </div>
           <div class="info__block-right">
-            <p class="info__text">Top 3D Shop – лидер по продажам 3D-оборудования в России и странах СНГ. В 2018 мы стали лучшим интегратором 3D оборудования по аддитивным технологиям и цифровому производству по версии <a href="#!">3D Print Awards.</a></p>
-            <p class="info__text">За 6 лет работы более 10 000 клиентов по всей России и СНГ выбрали Top 3D Shop. В 2018 наш оборот составил 600 млн. рублей, в компании работает более 100 сотрудников.</p>
-            <p class="info__text">Новая цель: 1 млрд торгового оборота в этом году и выход на международные рынки. Если вы — целеустремленный специалист, готовый учиться новым навыкам и учить других, мыслите не просто как исполнитель, а как владелец своего направления, то нам по пути!</p>
+            <p class="info__text">Top 3D Shop – лидер по продажам 3D-оборудования в России и странах СНГ. В 2018 мы
+              стали лучшим интегратором 3D оборудования по аддитивным технологиям и цифровому производству по версии <a
+                href="#!">3D Print Awards.</a></p>
+            <p class="info__text">За 6 лет работы более 10 000 клиентов по всей России и СНГ выбрали Top 3D Shop. В 2018
+              наш оборот составил 600 млн. рублей, в компании работает более 100 сотрудников.</p>
+            <p class="info__text">Новая цель: 1 млрд торгового оборота в этом году и выход на международные рынки. Если
+              вы — целеустремленный специалист, готовый учиться новым навыкам и учить других, мыслите не просто как
+              исполнитель, а как владелец своего направления, то нам по пути!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <h2 class="visually-hidden">Видео о нас</h2>
+      <div class="about__wrapper">
+        <h3 class="about__sub-head">Лучше один раз увидеть:</h3>
+        <div class="about__nav">
+          <ul class="about__list">
+            <li><a href="#!">Как устроена наша компания изнутри</a></li>
+            <li><a href="#!">Как создавалась компания - необычная история</a></li>
+            <li><a href="#!">Читай о нас на 3D Today</a></li>
+          </ul>
+        </div>
+        <div class="about__block-video">
+          <div class="about__slider-wrapper swiper-container">  
+            <h3 class="about__head">Видео о нас</h3>
+            <div class="about__btn">
+              <button class="about__arrow about__arrow--prew">
+                <svg width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M10 1L1 9.5L10 18" stroke="#4D4D4D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </button>
+              <button class="about__arrow about__arrow--next">
+                <svg width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.999998 18L10 9.5L1 0.999999" stroke="#4D4D4D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </button> 
+            </div> 
+            <div class="about__slides swiper-wrapper">
+              <div class="about__slide swiper-slide">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qFzuPICPvqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+              </div>
+              <div class="about__slide swiper-slide">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qFzuPICPvqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+              </div>
+              <div class="about__slide swiper-slide">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qFzuPICPvqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+              </div>
+              <div class="about__slide swiper-slide">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qFzuPICPvqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -388,6 +443,7 @@
   <footer class="footer">
   </footer>
 
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
